# vid-tiberius

./: CMakeLists.txt  LICENSE  README.md  cegcc-code-r1449-trunk-gcc10.diff  command_line_to_argvw.c  control_interface.h  ff_helpers.h  nullptr.h  pthreads-w32-2-9-1-release-fixes.diff  vid-sender-front.service  vid-sender.service  vid_receiver.cpp  vid_receiver_common.h  vid_receiver_res.rc  vid_sender.cpp  vid_simplereceiver.cpp
